styles/style.css
body{
    font-family: 'Lato', sans-serif;
    min-width: 576px;
}
/*284*/
@media screen and (max-width: 767px) {/*<=small*/
    .interactive-box{
        min-height: 150px;
    }
    #about-me{
        font-size: 0.80rem;
    }
}
@media screen and (min-width: 768px) {/*>=medium*/
    .interactive-box{
        min-height: 330px;
    }
    #about-me{
        font-size: 1rem;
    }
}

.carousel-indicators li{
    background-color: #333;
}
.carousel-indicators .active{
    background-color: #f33;
}
.carousel-control-next-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
}
.carousel-control-prev-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%black' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
}
.carousel-caption h3{
    color: black;
}
.carousel-caption p{
    color: black;
}

.floating-background{
    z-index: 1;
}

#panel1{
    background-color: #f7b731;
}
#panel2{
    height: auto;
    min-height: 100vh;
}
#panel3{
    height: auto;
    min-height: 900px;
    background-color: #f7b731;/*#3c6382;*/
}

#console-input-cursor{
    background-color: white;
    margin-left: 2px;
}
#console-input-cursor.blinking-cursor{
    -webkit-animation: 1s blink step-end infinite;
    -moz-animation: 1s blink step-end infinite;
    -ms-animation: 1s blink step-end infinite;
    -o-animation: 1s blink step-end infinite;
    animation: 1s blink step-end infinite;
}
#console-input-cursor.no-blink{
    opacity: 1;
}

.center-children {
    margin-top: 10px;
    text-align: center;
}
.center-children > h4{
    margin: auto;
}

#console{
    height: auto;
    font-size: 14px;
}
#console-input{
    display: flex;
}

.small-box {
    position: relative;
    opacity: 0.9;
    border-radius: 5px;
    display: block;
    background-color: white;
    top: 25vh;
    height: 30vh;
    left: 50%;
    margin: 20px 5px;
    padding: 3px;
    box-shadow: 0px 1px 2px #808080;
    transform: translate(-50%, 0%);
    -ms-transform: translate(-50%, 0%); /* IE 9 */
    -webkit-transform: translate(-50%, 0%); /* Safari */
}

.small-box div{
    font-family: 'Lato', sans-serif;
    position: relative;
    top: 50%;
    transform: translate(0%, -50%);
    -ms-transform: translate(0%, -50%); /* IE 9 */
    -webkit-transform: translate(0%, -50%); /* Safari */
}

.small-box #barcode{
    font-family: 'Libre Barcode 39', 'Lato', sans-serif;
}

.small-box #name{
    font-family: 'Lato', sans-serif;
}

.interactive-box{
    position: relative;
    opacity: 0.9;
    border-radius: 5px;
    display: block;
    background-color: white;
    height: calc(100% - 30px);
    min-height: 210px;
    top: 0px;
    left: 0px;
    margin: 15px;
    padding: 3px;
    box-shadow: 0px 1px 2px #808080;
    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.interactive-box::after {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    
    box-shadow: 0 5px 15px #505050;
    opacity: 0;

    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.interactive-box:hover {
  -webkit-transform: scale(1.05, 1.05);
  transform: scale(1.05, 1.055);
}

.interactive-box:hover::after{
    opacity: 1;
}

a.scroll-to{
    text-shadow: 2px 2px black;
    color: rgb(255, 255, 255);
}
a.scroll-to:hover{
    color: red;
    text-decoration: none;
}

hr{
    border-top: 1px solid black;
}

.section{
    /*height: 100vh;*/
    min-height: 100vh !important;
}

.section-title-container{
     height: 72px;
     justify-content: center;
 }

.section-title-fixed{
    position: fixed;
    left: 50%;
    transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0); /* IE 9 */
    -webkit-transform: translate(-50%, 0); /* Safari */
    font-size: 48px;
    text-align: center;
}

.section-title{
    font-size: 48px;
    text-align: center;
    bottom: auto;
}

.moving-title .section-title{
    bottom: auto;
}

.moving-title .section-title .section-display-text{
    display: block;
    margin-left: 0;
    margin-right: 0;
    font-weight: bold;
    font-size: 1em;
}

.section-display-subtext{
    display: block;
    margin-left: 0;
    margin-right: 0;
    font-weight: bold;
    font-size: 0.75em;
}


.face{
    min-height: 400px;
}
.face img{
    max-width: 100%;
    max-height: 70vh;
    height: auto;
    position: relative;
    top: 50%;
    -ms-transform: translate(0, -50%); /* IE 9 */
    -webkit-transform: translate(0, -50%); /* Safari */
    transform: translate(0, -50%);
}
.face#left-face{
    text-align: right;
}
.face#left-face img{
    border-radius: 10px;
}

.background-img{
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: -1000;
    background-color: #333;
}

.background-img div{
    color: white;
}

.background-img div{
    height: 100%;
    padding: 0;
}

.background-img div img{
    height: 100%;
}

.big-link{
    font-size: 32px;
}

.center{
    top: 50%;
    -ms-transform: translate(0, -50%); /* IE 9 */
    -webkit-transform: translate(0, -50%); /* Safari */
    transform: translate(0, -50%);
    display: flex;
    justify-content: center;
}
.center ul li{
    display: flex;
    justify-content: center;
}

.center-vert{
    top: 50%;
    -ms-transform: translate(0, -50%); /* IE 9 */
    -webkit-transform: translate(0, -50%); /* Safari */
    transform: translate(0, -50%);
}

.project-img{
    position: relative;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%); /* IE 9 */
    -webkit-transform: translate(-50%, -50%); /* Safari */
    transform: translate(-50%, -50%);
    max-height: 400px; 
    width: 100%;
}

#projects-fasttunnel-img{
    max-width: calc(400px * 0.5625); 
}

#projects-hotdog-img{
    max-width: calc(400px * 0.7129); 
}

#projects-taca-img{
    max-width: calc(400px * 0.5625);
}

#educ-img-1 img{
    max-width: 100%;
    max-height: 70vh;
    height: auto;
}
#educ-img-1{
    text-align: center;
}
#empl-img-1{
    text-align: center;
}
#empl-img-1 img{
    max-width: 100%;
    max-height: 70vh;
    height: auto;
}

#google-play{
    height: auto;
    width: 240px;
}

#contact-information{
    text-align: center;
    margin-top: 30px;
}

#contact-information ul{
    list-style: none;
    padding: 0;
}


/*Keyframes*/

@keyframes blink {
  from, to {
    background-color: transparent;
  }
  50% {
    background-color: white;
  }
}

@-moz-keyframes blink {
  from, to {
    background-color: transparent;
  }
  50% {
    background-color: white;
  }
}

@-webkit-keyframes blink {
  from, to {
    background-color: transparent;
  }
  50% {
    background-color: white;
  }
}

@-ms-keyframes blink {
  from, to {
    background-color: transparent;
  }
  50% {
    background-color: white;
  }
}

@-o-keyframes blink {
  from, to {
    background-color: transparent;
  }
  50% {
    background-color: white;
  }
}

.test-box {
    border-radius: 5px;
    opacity: 0.9;
    margin-bottom: 15px;
    background-color: white;
}

.test-box .col{
    padding: 15px;
}

